@@ -207,7 +207,7 @@ public final class JsonSerializer {
 
         T instance;
         try {
-            instance = type.newInstance();
+            instance = type.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalArgumentException(
                     "Could not create an instance of type " + type
@@ -391,7 +391,8 @@ public final class JsonSerializer {
                             + "'. Use Lists, Sets or concrete classes that implement java.util.Collection.");
         }
         try {
-            return (Collection<?>) collectionType.newInstance();
+            return (Collection<?>) collectionType.getDeclaredConstructor()
+                    .newInstance();
         } catch (Exception e) {
             throw new IllegalArgumentException(
                     "Could not create an instance of the collection of type "
