@@ -37,8 +37,9 @@ class ThemeWrapper implements AbstractTheme, Serializable {
     private final Serializable instance;
 
     public ThemeWrapper(Class<? extends AbstractTheme> theme)
-            throws InstantiationException, IllegalAccessException {
-        instance = theme.newInstance();
+            throws InstantiationException, IllegalAccessException,
+            NoSuchMethodException, InvocationTargetException {
+        instance = theme.getDeclaredConstructor().newInstance();
     }
 
     @Override
